Frontend de la aplicacion en javascript y jquery

--- a/.business-administrator/src/main/resources/static/Employees.html
+++ b/.business-administrator/src/main/resources/static/Employees.html
@@ -9,16 +9,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Blank</title>
+    <title>SB Admin 2 - Tables</title>
 
-    <!-- Custom fonts for this template-->
+    <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
             href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
             rel="stylesheet">
 
-    <!-- Custom styles for this template-->
+    <!-- Custom styles for this template -->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this page -->
+    <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 </head>
 
@@ -155,43 +158,46 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Nueva empresa</h1>
-                            </div>
-                            <form class="user">
-                                <div class="form-group">
-                                    <input type="" class="form-control form-control-user"
-                                           id="name" aria-describedby="emailHelp"
-                                           placeholder="Nombre">
-                                </div>
-                                <div class="form-group">
-                                    <input type="" class="form-control form-control-user"
-                                           id="address" placeholder="Dirección">
-                                </div>
-                                <div class="form-group">
-                                    <input type="" class="form-control form-control-user"
-                                           id="phone" placeholder="Teléfono">
-                                </div>
-                                <div class="form-group">
-                                    <input type="" class="form-control form-control-user"
-                                           id="nit" placeholder="Nit">
-                                </div>
-                                <div class="form-group">
+                <div>
 
-                                </div>
-                                <button id="saveEnterprise" class="btn btn-primary btn-user btn-block">
-                                    Ingresar
-                                </button>
-                                <hr>
+                    <h1 class="h3 mb-2 text-gray-800">USUARIOS</h1>
+                    <a href="/NewEmployee.html" class="btn btn-primary btn-icon-split btn-lg">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-flag"></i>
+                                        </span>
+                        <span class="text">Nuevo usuario</span>
+                    </a>
 
-                            </form>
+                </div>
 
+
+                <!-- DataTales Example -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="EmployeeTable" width="100%" cellspacing="0">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nombre</th>
+                                    <th>Email</th>
+                                    <th>Rol</th>
+                                    <th>Empresa</th>
+                                    <th>Acciones</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- /.container-fluid -->
 
@@ -247,7 +253,14 @@
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for all pages-->
-<script src="js/demo/newEnterprise_Scripts.js"></script>
+<script src="js/sb-admin-2.min.js"></script>
+
+<!-- Page level plugins -->
+<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="js/demo/employees_Scripts.js"></script>
 
 </body>
 
