--- a/.business-administrator/src/main/resources/static/login2.html
+++ b/.business-administrator/src/main/resources/static/login2.html
@@ -44,19 +44,19 @@ login.html<!DOCTYPE html>
                                     <form class="user">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                                id="InputUserName" aria-describedby="emailHelp"
                                                 placeholder="Ingresa tu usuario...">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Ingresa tu contraseña">
+                                                id="InputPassword" placeholder="Ingresa tu contraseña">
                                         </div>
                                         <div class="form-group">
 
                                         </div>
-                                        <a href="dashboard.html" class="btn btn-primary btn-user btn-block">
+                                        <button id="submit" href="#" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                         <hr>
 
                                     </form>
