--- a/.business-administrator/src/main/resources/static/Dashboard.html
+++ b/.business-administrator/src/main/resources/static/Dashboard.html
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="Dashboard.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="dashboard.html">
+                <a class="nav-link" href="Dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -64,7 +64,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="employees.html">
+                <a class="nav-link" href="Employees.html">
                     <i class="fas fa-fw fa fa-users"></i>
                     <span>Usuarios</span></a>
             </li>
@@ -188,7 +188,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Sistema de gestión de Usuarios</div>
                                         </div>
                                         <div class="col-auto">
-                                            <a class="nav-link" href="employees.html">
+                                            <a class="nav-link" href="Employees.html">
                                                 <i class="fas fa-users fa-2x text-gray-300"></i>
                                             </a>
                                         </div>
