--- a/.business-administrator/src/main/resources/static/NewTransaction.html
+++ b/.business-administrator/src/main/resources/static/NewTransaction.html
@@ -31,7 +31,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="Dashboard.html">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
@@ -43,7 +43,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="dashboard.html">
+            <a class="nav-link" href="Dashboard.html">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
         </li>
@@ -64,7 +64,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="employees.html">
+            <a class="nav-link" href="Employees.html">
                 <i class="fas fa-fw fa fa-users"></i>
                 <span>Usuarios</span></a>
         </li>
@@ -163,16 +163,16 @@
                         </div>
                         <form class="user">
                             <div class="form-group">
-                                <input type="email" class="form-control form-control-user"
+                                <input type="" class="form-control form-control-user"
                                        id="monto" aria-describedby="emailHelp"
                                        placeholder="Monto">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control form-control-user"
+                                <input type="" class="form-control form-control-user"
                                        id="concepto" placeholder="Concepto">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control form-control-user"
+                                <input type="" class="form-control form-control-user"
                                        id="fecha" placeholder="Fecha">
                             </div>
                             <div class="form-group">
@@ -243,7 +243,7 @@
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for all pages-->
-<script src="js/sb-admin-2.min.js"></script>
+<script src="js/demo/newTransaction_Scripts.js"></script>
 
 </body>
 
