--- a/.business-administrator/src/main/resources/static/index.html
+++ b/.business-administrator/src/main/resources/static/index.html
@@ -78,7 +78,7 @@
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Core plugin JavaScript-->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="js/demo/login_Scripts.js"></script>
 
 <!-- Custom scripts for all pages-->
 <script src="js/sb-admin-2.min.js"></script>
